--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: PLUGINS REVIEW
 logo: /assets/img/logo.png
 description: Plugin analysis website
 lang: en
+version: 3.8.5
 footer: © PROGRAMMING REVIEW 2010-2020
 markdown: kramdown
 kramdown:
